# bacteria

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/processed/: cellpose_masks_f0.npy  centroids_classical.npy  centroids_final.npy
docs/: detection_tuning.md  project_log.md  review1.md
notebooks/: analysis.ipynb
results/: track_statistics.csv  tracked_cells.csv
results/run_01/: clustering_summary.csv  fate_prediction_summary.csv  fate_predictions.csv  frame_diagnostics.csv  merge_log.csv  nucleus_persistence.csv  nucleus_persistence_summary.csv  spatial_gradient.csv  spatial_gradient_summary.csv  track_statistics.csv  tracked_cells.csv
scripts/: diagnostic_overlay.py
src/cell_analysis/: __init__.py  io.py  matching.py  pipeline.py  plotting.py  segmentation.py  tracking.py
tests/: test_fate_prediction.py  test_fluorescence_concentration.py  test_frame_gating.py  test_growth_phases.py  test_migration_speed.py  test_preburst_fluorescence.py  test_sav_ratio.py  test_spatial_clustering.py  test_spatial_gradient.py
